tests/pass/BANDAssign.java
package pass;

public class BANDAssign {

	public int bANDAssign(int x, int y) {
		int t = x;
		t &= y;
		return t;
	}
}
