tests/fail/BANDAssign.java
package fail;

public class BANDAssign {
	
	public static void main(String[] args) {
		int t = 3;
		t &= "a";
	}	
}
